<resources>
    <string name="app_name">My Movie Show</string>
    <string name="enter_title">Enter title...</string>
    <string name="search">Search</string>
    <string name="person_name">Person Name</string>
    <string name="also_known_as">Also Known as :</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="place_of_birth">Place of Birth :</string>
    <string name="death_day">Death day :</string>
    <string name="department">Department :</string>
    <string name="homepage">Homepage :</string>
    <string name="biography">Biography :</string>
    <string name="profile">Profile</string>
    <string name="title">Title :</string>
    <string name="language">Language :</string>
    <string name="adult">Adult :</string>
    <string name="status">Status :</string>
    <string name="runtime">Runtime :</string>
    <string name="budget">Budget :</string>
    <string name="revenue">Revenue :</string>
    <string name="genres">Genres :</string>
    <string name="production_country">Production Country :</string>
    <string name="release_date">Release Date :</string>
    <string name="homepage1">Homepage :</string>
    <string name="average_rating">Rating</string>
    <string name="overview">Overview :</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_details">Movie Details</string>
    <string name="movie_cast">Movie Cast :</string>
    <string name="movie_crew">Movie Crew :</string>
    <string name="production_company">Production Company :</string>
    <string name="images_and_posters">Images and Posters :</string>
    <string name="videos_and_trailers">Videos and Trailers :</string>
    <string name="more_videos_are_not_found">More Videos Are Not Found.</string>
</resources>