<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/app_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="24sp"
                app:fontFamily="@font/acme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/app_logo"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:layout_below="@id/main_toolbar"
        android:background="@drawable/tool_bar_shadow" />

<!--    <Spinner-->
<!--        android:id="@+id/source_spinner"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/toolbar_shadow"-->
<!--        android:layout_margin="10dp"-->
<!--        android:minHeight="48dp"-->
<!--        android:padding="20dp"-->
<!--        tools:ignore="SpeakableTextPresentCheck" />-->
    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/source_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_shadow"
        android:layout_margin="10dp"
        android:backgroundTint="#FFEB3B"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/source_spinner"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/queryEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_title"
            android:inputType="text"
            android:lines="1"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#393939" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/query_search_btn"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/search"
            android:textAllCaps="false"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/results_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_layout"
       android:layout_margin="10dp" />
</RelativeLayout>